[tool.poetry]
name = "amberapi_v1"
version = "0.1.0"
description = ""
authors = ["paul sorenson <paul@metrak.com>"]

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.25.0"
asyncio-mqtt = "^0.12.1"
keyring = "^23.5.0"
pandas = "^1.4.2"
aioconveyor = {git = "https://github.com/PaulSorenson/aioconveyor", rev = "main"}

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
amberv1 = "amberapi_v1.amber:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
