[metadata]
name = amber
version = 0.0.1
description= poll amber public API
keywords = amber, api
author = paul sorenson
author_email = news02@metrak.com

[options]
python_requires = >=3.8
install_requires =
    setuptools
    wheel
requires =
    asyncpg
    asyncio-mqtt
    keyring
    pandas
    aioconveyor
package_dir =
    =src
packages = find:
test_suite = tests

[options.packages.find]
where = src
